5.kubernetes-network/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    service: postgres
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
  - port: 5432
