5.kubernetes-network/redmine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine
  labels:
    service: redmine
spec:
  selector:
    app: redmine
  type: ClusterIP
  ports:
  - port: 3000
