5.kubernetes-network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: redmine-ingress
 annotations:
   kubernetes.io/ingress.class: nginx
spec:
 rules:
 - http:
     paths:
     - path: "/"
       pathType: Prefix
       backend:
         service:
           name: redmine
           port:
             number: 3000
